--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="col-md-10">
           <div id="table-area" class="">
-            <table id="ufo-table" class="table table-striped">
+            <table id="ufo-table" class="table">
               <thead>
                 <tr>
                   <th class="table-head">Date</th>
