--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
   <p>The Truth is Out There</p>
 </div>
 <div class="container">
+  <div class="row margin-top-50">
+    <div class="col-md-2">
+      <aside class="filters">
+            <div class="container">
+              <div class="row margin-top-50">
+              <div class="col-md-2">
       </div>
         </aside>
         </div>
